--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,20 @@
 # ASP.NET Core (.NET Framework)
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
 # Build and test ASP.NET Core projects targeting the full .NET Framework.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
 - master
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'Drop'
+    publishLocation: 'pipeline'
 
 pool:
   vmImage: 'windows-latest'
