--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,4 @@
 # Docker
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
-- task: CopyFiles@2
-  inputs:
-    Contents: 'deployment.azure.yaml'
-    TargetFolder: '$(build.artifactstagingdirectory)'
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - master
 
@@ -46,5 +34,14 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+    - task: PublishBuildArtifacts@1
+      inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'drop'
+          publishLocation: 'Container'
+    - task: CopyFiles@2
+      inputs:
+        Contents: 'deployment.azure,yaml'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
           
